# dream-trainer

./: .gitignore  404.html  README.md  checkpointing.md  contributing.md  coverage.xml  debugging.md  getting-started.md  index.html  installation.md  llms.txt  logging-metrics.md  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: docs.yaml
agents/: index.html
api/: index.html  index.md
api-reference-example/: index.html
api/callbacks/: base.md  checkpoint.md  performance.md
api/configuration/: device.md  training.md
api/mixins/: loggers.md
api/trainers/: abstract.md  base.md
api/utilities/: cli.md  common.md  world.md
callbacks/: index.html
checkpointing/: index.html
cli/: index.html
comparison/: index.html
configuration/: index.html
configuration-mastery/: index.html
contributing/: index.html
core-concepts/: index.html
debugging/: index.html
design-philosophy/: index.html
docs/: agents.md  callbacks.md  cli.md  comparison.md  configuration.md  contributing.md  core-concepts.md  debugging.md  design-philosophy.md  faq.md  index.md  parallelism.md  performance.md  trainer-guide.md  troubleshooting.md
docs/api/: index.md
documentation-roadmap/: index.html
faq/: index.html
getting-started/: index.html
includes/: lifecycle.md
installation/: index.html
logging-metrics/: index.html
pages/: mkdocs.yml
parallelism/: index.html
performance/: index.html
search/: search_index.json
trainer-guide/: index.html
troubleshooting/: index.html
tutorials/: custom-components.md  multi-gpu.md  production.md
(+116 files in other folders)
