[project]
name = "dream-trainer"
version = "0.2.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Tony Francis", email = "tony@dream3d.com" },
    { name = "Vikaas Varma", email = "vik@dream3d.com" }
]
requires-python = ">=3.10"
dependencies = [
    "loguru>=0.7.3",
    "torch>=2.9.1",
    "tqdm>=4.67.1",
]

[project.optional-dependencies]
wandb = [
    "wandb[media]>=0.26.0",
]
rich = [
    "rich>=14.0.0",
]
metrics = [
    "torchmetrics>=1.9.0",
]
torchao = [
    "torchao",
]
cli = [
    "typer>=0.24.1",
    "rich>=15.0.0",
]

[dependency-groups]
dev = [
    "ruff>=0.11.7",
]
docs = [
    "jinja2>=3.1.3",
    "mkdocs-minify-plugin>=0.8.0",
    "mkdocs-shadcn>=0.10.4",
    "mkdocstrings[python]>=0.29.1",
    "pygments>=2.19.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
src = ["trainer"]
line-length = 96
indent-width = 4
lint.dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
lint.ignore = ["F722", "E731", "F821", "E741"]

[tool.uv.extra-build-dependencies]
torchft = ["maturin"]
